# TDD

./: README.md  myobj.py  nasa_mass_avg.py  pyproject.toml
simple_calculator/: main.py  meteorites.py
tests/: test_main.py  test_meteorites.py  test_myobj.py
