[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["JichangJang <wlckd90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tox = "^3.23.1"
coverage = "^5.5"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
mypy = "^0.902"
black = "^21.6b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
